# Copyright (C) 2007 the authors.
#
# This file is part of the Fhtagn! C++ Library, and may be distributed under
# the following license terms and conditions as set forth in the COPYING file
# included in this source distribution.

include $(top_srcdir)/Makefile.common

lib_LTLIBRARIES = libfhtagn_xml.la

libfhtagn_xml_la_SOURCES = \
	xmlparser.cpp

include_HEADERS = \
	xmlparser.h

noinst_HEADERS = \
	xmlgrammar.h
